# wirewalker

./: CMakeLists.txt  COPYING  README.md
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/common_types/: CMakeLists.txt  compressed_int.cpp  compressed_ints_test.cpp  ints.cpp  ints_test.cpp
src/core/include/wirewalker/: compressed_int.hpp  interface_id.hpp  marshall.hpp  object_id.hpp  packet.hpp  types.hpp
src/core/interface/: CMakeLists.txt  interface_id.cpp  interfaceidmarshall_test.cpp
src/core/object/: CMakeLists.txt  builder.cpp  object_id.cpp  objectidmarshall_test.cpp
src/core/packet/: CMakeLists.txt  marshaller.cpp  packet.cpp  packet_test.cpp
src/oap/: CMakeLists.txt  test_runner.cpp
src/oap/common/: CMakeLists.txt  opcode.cpp  opcodemarshall_test.cpp
src/oap/include/wirewalker/oap/: request.hpp
src/oap/internal_include/internal/oap/: opcode.hpp  wire.hpp
src/oap/request/: CMakeLists.txt  interest.cpp  interestmarshall_test.cpp  io_requests.hpp  request.cpp
src/oap/wire/: CMakeLists.txt  receive.cpp  send.cpp  sendreceive_test.cpp
